--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="module" src="/src/tabs.ts"></script>
   </head>
   <body>
+    <h2>Tabs POC</h2>
     <studs-tabs>
       <button slot="tab">Tab 1</button>
       <section slot="panel">Content for tab 1</section>
