--- a/index.html
+++ b/index.html
@@ -18,5 +18,54 @@
       <button slot="tab">Tab 3</button>
       <section slot="panel">Content for tab 3</section>
     </studs-tabs>
+
+    <h2>Tabs Example</h2>
+    <studs-tabs>
+      <button slot="tab">Bridging and Bracing Connectors</button>
+      <section slot="panel">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Lacus luctus
+        accumsan tortor posuere ac. Tristique nulla aliquet enim tortor at
+        auctor. Mauris a diam maecenas sed enim ut sem viverra aliquet.
+        Curabitur gravida arcu ac tortor dignissim convallis. In eu mi bibendum
+        neque egestas. Nisl vel pretium lectus quam id. Est placerat in egestas
+        erat imperdiet sed euismod nisi porta. Curabitur gravida arcu ac tortor
+        dignissim convallis aenean et. Euismod in pellentesque massa placerat
+        duis ultricies lacus sed. Vestibulum lectus mauris ultrices eros in. Sit
+        amet tellus cras adipiscing enim eu turpis. Habitasse platea dictumst
+        vestibulum rhoncus est pellentesque elit ullamcorper dignissim. Placerat
+        vestibulum lectus mauris ultrices eros in cursus turpis.
+      </section>
+      <button slot="tab">Lateral Connectors, Ties and Straps</button>
+      <section slot="panel">
+        Massa massa ultricies mi quis hendrerit dolor magna eget est. Tempus
+        quam pellentesque nec nam aliquam sem. Accumsan sit amet nulla facilisi
+        morbi tempus iaculis urna. Malesuada bibendum arcu vitae elementum.
+        Egestas purus viverra accumsan in nisl. Pulvinar etiam non quam lacus
+        suspendisse faucibus interdum posuere lorem. Commodo quis imperdiet
+        massa tincidunt. Amet consectetur adipiscing elit ut aliquam purus sit
+        amet. Sed augue lacus viverra vitae congue eu. Tortor vitae purus
+        faucibus ornare suspendisse sed nisi. Fermentum dui faucibus in ornare
+        quam viverra orci sagittis. Nunc mi ipsum faucibus vitae aliquet.
+        Tincidunt augue interdum velit euismod in pellentesque massa placerat.
+      </section>
+      <button slot="tab">Concrete Connectors</button>
+      <section slot="panel">
+        Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam nulla
+        facilisi. Pharetra vel turpis nunc eget lorem dolor. Facilisis magna
+        etiam tempor orci. Id faucibus nisl tincidunt eget. Nunc lobortis mattis
+        aliquam faucibus purus in. Duis convallis convallis tellus id interdum
+        velit laoreet. Facilisis gravida neque convallis a. Morbi enim nunc
+        faucibus a pellentesque sit amet porttitor. Netus et malesuada fames ac
+        turpis egestas. Varius sit amet mattis vulputate enim nulla aliquet.
+        Eget mauris pharetra et ultrices. Nibh cras pulvinar mattis nunc sed.
+        Aliquet bibendum enim facilisis gravida. Enim blandit volutpat maecenas
+        volutpat blandit aliquam etiam erat. Placerat orci nulla pellentesque
+        dignissim enim sit. A diam sollicitudin tempor id eu nisl nunc. Id eu
+        nisl nunc mi ipsum faucibus vitae. Velit aliquet sagittis id consectetur
+        purus ut faucibus pulvinar. Mattis enim ut tellus elementum sagittis
+        vitae et leo duis.
+      </section>
+    </studs-tabs>
   </body>
 </html>
