refactor component and styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="module" src="/src/tabs.ts"></script>
   </head>
   <body>
-    <h2>Tabs POC</h2>
+    <h2>Tabs</h2>
     <studs-tabs>
       <button slot="tab">Tab 1</button>
       <section slot="panel">Content for tab 1</section>
@@ -19,7 +19,8 @@
       <section slot="panel">Content for tab 3</section>
     </studs-tabs>
 
-    <h2>Tabs Example</h2>
+    <br /><br /><br /><br />
+    <h2>Tabs with long text</h2>
     <studs-tabs>
       <button slot="tab">Bridging and Bracing Connectors</button>
       <section slot="panel">
