updates to tab component

--- a/index.html
+++ b/index.html
@@ -5,17 +5,28 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Lit + TS</title>
-    <link rel="stylesheet" href="./src/index.css" />
+    <!-- <link rel="stylesheet" href="./src/index.css" /> -->
     <script type="module" src="/src/tabs.ts"></script>
   </head>
   <body>
     <h2>Tabs</h2>
+    <studs-tabs tabDirection="column" variant="contained">
+      <button slot="tab">Tab 1</button>
+      <section slot="panel">Content for tab 1</section>
+      <button slot="tab">Tab 2</button>
+      <section slot="panel">Content for tab 2</section>
+      <button slot="tab">Tab3</button>
+      <section slot="panel">Content for tab 3</section>
+    </studs-tabs>
+
+    <br /><br /><br /><br />
+    <h2>Tabs with Disabled</h2>
     <studs-tabs>
       <button slot="tab">Tab 1</button>
       <section slot="panel">Content for tab 1</section>
       <button slot="tab">Tab 2</button>
       <section slot="panel">Content for tab 2</section>
-      <button slot="tab">Tab 3</button>
+      <button slot="tab" disabled>Disabled</button>
       <section slot="panel">Content for tab 3</section>
     </studs-tabs>
 
