--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   </head>
   <body>
     <h2>Tabs</h2>
-    <studs-tabs tabDirection="column" variant="contained">
+    <studs-tabs>
       <button slot="tab">Tab 1</button>
       <section slot="panel">Content for tab 1</section>
       <button slot="tab">Tab 2</button>
       <section slot="panel">Content for tab 2</section>
-      <button slot="tab">Tab3</button>
+      <button slot="tab">Tab 3</button>
       <section slot="panel">Content for tab 3</section>
     </studs-tabs>
 
@@ -30,6 +30,17 @@
       <section slot="panel">Content for tab 3</section>
     </studs-tabs>
 
+    <br /><br /><br /><br />
+    <h2>Tabs with contained</h2>
+    <studs-tabs tabDirection="row" variant="contained">
+      <button slot="tab">Tab 1</button>
+      <section slot="panel">Content for tab 1</section>
+      <button slot="tab">Tab 2</button>
+      <section slot="panel">Content for tab 2</section>
+      <button slot="tab">Tab3</button>
+      <section slot="panel">Content for tab 3</section>
+    </studs-tabs>
+    
     <br /><br /><br /><br />
     <h2>Tabs with long text</h2>
     <studs-tabs>
